# markdown-boxes

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html
.github/workflows/: deploy.yml
docs/plans/: 2026-03-01-github-pages-deployment-design.md  2026-03-01-markdown-boxes-design.md  2026-03-01-markdown-boxes-implementation.md  2026-03-02-svg-visuals-design.md  2026-03-02-svg-visuals-implementation.md  2026-03-04-mdal-integration-design.md  2026-03-04-mdal-integration-implementation.md
src/: engine.rs  lib.rs  main.rs  store.rs  substitute.rs
src/components/: category_filter.rs  form_field.rs  markdown_preview.rs  mod.rs  search_bar.rs  template_card.rs
src/models/: filter.rs  mod.rs  placeholder.rs  section.rs  style.rs  template.rs
src/pages/: gallery.rs  mod.rs  template_view.rs
templates/backend-patterns/: background-jobs.mdal
templates/design-prompts/: dashboard.md  dashboard.mdal  landing-page.md  landing-page.mdal  portfolio.mdal
templates/full-stack-flows/: crud-api.md  crud-api.mdal
templates/implementation-plans/: auth-flow.md  auth-flow.mdal  ci-cd-pipeline.mdal
templates/ui-components/: data-table.md  data-table.mdal  form-wizard.md  form-wizard.mdal
