[package]
name = "markdown-boxes"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = { version = "0.50", default-features = false }
web-sys = { version = "0.3", features = ["Navigator", "Clipboard", "Blob", "Url", "HtmlAnchorElement", "BlobPropertyBag"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
glob = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
